--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -307,23 +307,13 @@
 
 
 <TextBlock Text="Возможные кроводачи" Style="{StaticResource Text36pxCBB2A3}" />
-                        
-                        <CheckBox Content="Тромбоциты" />
-                        <CheckBox Content="Цельная" />
-                        <CheckBox Content="Плазма" />
+
+                            <CheckBox Content="Тромбоциты" FontSize="24" Foreground="#FFCBB2A3" />
+                            <CheckBox FontSize="24" Foreground="#FFCBB2A3" Content="Цельная" />
+                            <CheckBox FontSize="24" Foreground="#FFCBB2A3" Content="Плазма" />
                     </StackPanel>
                     </ScrollViewer>
-                    <!--<WPExtensions:AdvancedApplicationBar Name="AppBarSettings" IsVisible="True" IsMenuEnabled="False">
-                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Name="EditButton" Text="Редактировать" Visibility="Visible" Click="AdvancedApplicationBarIconButton_Click" />
-                        <WPExtensions:AdvancedApplicationBarIconButton 
-						IconUri="/icons/appbar.delete.rest.png" 
-						Text="Выход" Visibility="Visible" 
-						Name="DeleteUserButton" Click="DeleteUserButton_Click" />
 
-                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.save.rest.png" Text="Сохранить" Visibility="Collapsed" Name="SaveEditProfileButton" Click="SaveEditProfileButton_Click" />
-                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Text="Отмена" Visibility="Collapsed" Name="CancelEditProfileButton" Click="CancelEditProfileButton_Click" />
-
-                    </WPExtensions:AdvancedApplicationBar>-->
                 </Grid>
             </controls:PivotItem>
         </controls:Pivot>        
