--- a/wp7-donor/Donor/EventPage.xaml
+++ b/wp7-donor/Donor/EventPage.xaml
@@ -70,7 +70,10 @@
                 </StackPanel>
             </ScrollViewer>
         </Grid>
-        <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="True">
+        <WPExtensions:AdvancedApplicationBar Name="AppBar" 
+		Background="#FF211E1D"	
+		BackgroundColor="#FF211E1D" Foreground="White"	
+		IsVisible="True" IsMenuEnabled="True">
             <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Name="EditButton" Text="Сохранить" Visibility="Visible" Click="EditButton_Click" />
             <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.delete.rest.png" Name="DeleteButton" Text="Отменить" Visibility="Visible" Click="DeleteButton_Click" />
         </WPExtensions:AdvancedApplicationBar>
