--- a/wp7-donor/Donor/AdsPage.xaml
+++ b/wp7-donor/Donor/AdsPage.xaml
@@ -12,6 +12,15 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
+	
+	<phone:PhoneApplicationPage.ApplicationBar>
+		<shell:ApplicationBar  BackgroundColor="#FF211E1D" ForegroundColor="White">
+			<shell:ApplicationBarIconButton x:Name="ShareButton" 
+			IconUri="/icons/appbar.share.rest.png" Text="Поделиться" 
+			Click="ShareButton_Click" 
+			/>
+		</shell:ApplicationBar>
+	</phone:PhoneApplicationPage.ApplicationBar>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
