--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -40,36 +40,44 @@
 			FullModeHeader="Тип события" 
 			FontSize="24" Foreground="#FF847168"
 			SelectionChanged="EventType_SelectionChanged" 
-			Loaded="EventType_Loaded" />
+			Loaded="EventType_Loaded" BorderBrush="#FF4F3B34" Background="#FF4F3B34" />
 
-            <toolkit:ListPicker x:Name="GiveType" 
-			
+            <toolkit:ListPicker x:Name="GiveType" 			
 			Header="Вид сдачи" FullModeHeader="Вид сдачи" 
-			FontSize="24" Foreground="#FF847168"/>
+			FontSize="24" Foreground="#FF847168" Background="#FF4F3B34" BorderBrush="#FF4F3B34"/>
             
             <TextBlock Text="Дата и время"
 			Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
             <StackPanel Orientation="Horizontal">
-                    <toolkit:DatePicker Width="250" Name="Date"/>
-                    <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}"/>
+                    <toolkit:DatePicker Width="250" Name="Date" 
+					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
+                    <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
             </StackPanel>
             <TextBlock Text="Место"
 			 Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
-            <TextBox Name="Place" Text="{Binding Place, Mode=TwoWay}"/>
+            <TextBox Name="Place" Text="{Binding Place, Mode=TwoWay}"
+			Style="{StaticResource TextBox1}"/>
                 <StackPanel Name="Reminder" Visibility="Collapsed">
-                    <TextBlock Text="Напоминание"/>
-                    <toolkit:ListPicker  x:Name="ReminderPeriod" Header="Напоминание" FullModeHeader="Напоминание"/>
-                    <CheckBox Name="KnowAboutResults" Content="Узнать результат" IsChecked="{Binding ReminderMessage, Mode=TwoWay}"/>
+                    <TextBlock Text="Напоминание" Style="{StaticResource Text24px847168}"/>
+                    <toolkit:ListPicker  x:Name="ReminderPeriod" Header="Напоминание" FullModeHeader="Напоминание" Foreground="#FFDF8D4B" BorderBrush="#FF4F3B34" Background="#FF4F3B34"/>
+                    <CheckBox Name="KnowAboutResults" 
+					FontSize="24"
+					Content="Узнать результат" IsChecked="{Binding ReminderMessage, Mode=TwoWay}" Foreground="#FF847168"/>
                 </StackPanel>
                     <TextBlock Text="Комментарии"
 					Style="{StaticResource Text24px847168}"
 					Margin="12,0,0,0"/>
-            <TextBox Text="{Binding Description, Mode=TwoWay}" Name="Description" />
+            <TextBox Text="{Binding Description, Mode=TwoWay}" 
+			Style="{StaticResource TextBox1}"
+			Name="Description" />
         </StackPanel>
             </ScrollViewer>
         </Grid>
 
-        <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="True">
+        <WPExtensions:AdvancedApplicationBar Name="AppBar" 
+		Background="#FF211E1D"	
+		BackgroundColor="#FF211E1D" Foreground="White"	
+		IsVisible="True" IsMenuEnabled="True">
             <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.save.rest.png" Name="SaveButton" Text="Сохранить" Visibility="Visible" Click="SaveButton_Click" />
             <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.link.png" Name="CancelButton" Text="Отменить" Visibility="Visible" Click="CancelButton_Click" />
         </WPExtensions:AdvancedApplicationBar>
