--- a/wp7-donor/Donor/CalendarYearPage.xaml
+++ b/wp7-donor/Donor/CalendarYearPage.xaml
@@ -184,9 +184,17 @@
 
         </controls:Pivot>
         <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="False">
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Text="Редактировать" Visibility="Visible" />
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.delete.rest.png" Text="Добавить событие" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Text="Календарь" Name="MonthCalendarButton" Click="MonthCalendarButton_Click" />
+            <!--
+			<WPExtensions:AdvancedApplicationBarIconButton 
+			IconUri="/icons/appbar.edit.rest.png" 
+			Text="Редактировать" Visibility="Visible" />-->
+            <WPExtensions:AdvancedApplicationBarIconButton 
+			IconUri="/icons/ic_ApplicationBar_add.png" Text="Добавить событие" 
+			Visibility="Visible" Name="AddEventButton" 
+			Click="AddEventButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton 
+			IconUri="/icons/ic_ApplicationBar_calendar.png" Text="Календарь" 
+			Name="MonthCalendarButton" Click="MonthCalendarButton_Click" />
 
         </WPExtensions:AdvancedApplicationBar>
     </Grid>
