--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -160,6 +160,7 @@ Style="{StaticResource Text24pxDF8D4B}"/>
 					BackgroundColor="#FF211E1D" Foreground="White"	
 					IsVisible="True" IsMenuEnabled="False">
                         <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Text="Написать"  Name="CreateReviewButton" Click="CreateReviewButton_Click" />
+                        <Image Height="800" Source="/SplashScreenImage.jpg" Stretch="Fill"/>
                         
 </WPExtensions:AdvancedApplicationBar>
                 </Grid>
