--- a/wp7-donor/Donor/EventPage.xaml
+++ b/wp7-donor/Donor/EventPage.xaml
@@ -37,37 +37,92 @@
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <ScrollViewer>
             <StackPanel>
+            		<StackPanel 
+					Orientation="Horizontal" 
+					Margin="0,5">
                     <TextBlock Text="{Binding Path=Title}" 
 					Name="TitleNews" 
 					Style="{StaticResource Text36pxB9A194}"
 					TextWrapping="Wrap"/>
+                    <Image Height="50" 
+					Name="ic_be_tested" Visibility="Collapsed"
+					Source="images/ic_be_tested.png"
+					 Stretch="Fill" Width="50"/>
+					
+					</StackPanel>
+					
                     <StackPanel Orientation="Horizontal">
                     <TextBlock Text="{Binding Path=ShortDate}" 
 					Name="Date" 
-					Style="{StaticResource Text36pxB9A194}" TextWrapping="Wrap"/>
+					Style="{StaticResource Text24pxDF8D4B}" 
+					TextWrapping="Wrap" Margin="0,0,10,0"/>
                     <TextBlock Text="{Binding Path=ShortTime}" 
-					Style="{StaticResource Text36pxB9A194}"
+					Style="{StaticResource Text24pxDF8D4B}"
 					Name="Time" TextWrapping="Wrap"/>
                     </StackPanel>
                     
-                    <TextBlock Text="{Binding Path=GiveType}" 
+                    <TextBlock Visibility="Collapsed" 
+					Text="{Binding Path=GiveType}" 
 					Style="{StaticResource Text36pxB9A194}"
 					Name="GiveType" TextWrapping="Wrap"/>
+					
+					<StackPanel Name="StackpanelPlace" 
+					Orientation="Horizontal" 
+					Margin="0,5">
                     <TextBlock Text="{Binding Path=Place}" 
-					Style="{StaticResource Text36pxB9A194}"
+					Style="{StaticResource Text24pxDF8D4B}"
 					Name="Place" TextWrapping="Wrap"/>
-                    <TextBlock 
+                    <Image Height="50" Source="images/ic_map.png" 
+					Stretch="Fill" Width="50"/>					
+					</StackPanel>
+
+                    <StackPanel Name="ReminderStackPanel">
+					<StackPanel Orientation="Horizontal" Margin="0,10,0,0"
+					>
+                    <TextBlock Text="Напоминание:" 
 					Style="{StaticResource Text36pxB9A194}"
+					TextWrapping="Wrap"/>
+                    
+                    <Image Height="50" Source="images/ic_reminder.png" 
+					Stretch="Fill" Width="50"/>	
+					</StackPanel>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="200"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="Сдача" Grid.Column="0" Grid.Row="0" />                      
+                            <TextBlock 
+					Style="{StaticResource Text24pxC0A89A}" Grid.Column="1" Grid.Row="0"
 					Text="{Binding Path=Reminder}" 
 					Name="Reminder" TextWrapping="Wrap"/>
+
+                            <TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="Узнать результат" Grid.Column="0" Grid.Row="1" />
+                            <TextBlock 
+					Style="{StaticResource Text24pxC0A89A}" Grid.Column="1" Grid.Row="1"
+					Text="{Binding Path=Reminder}" 
+					TextWrapping="Wrap"/>
+                        </Grid>
+                            
+                    </StackPanel>
+                
                     <TextBlock Text="{Binding Path=FinishedString}"
-					Style="{StaticResource Text36pxB9A194}"
+					Style="{StaticResource Text24pxDF8D4B}"
 					Name="Finished" TextWrapping="Wrap"/>
+					
+					<StackPanel Orientation="Horizontal" Margin="0,10">
                     <TextBlock Text="Комментарии:" 
 					Style="{StaticResource Text36pxB9A194}"
 					TextWrapping="Wrap"/>
+                    <Image Height="50" 
+					Source="images/ic_comment.png" 
+					Stretch="Fill" Width="50"/>					
+					</StackPanel>
+					
                     <TextBlock Text="{Binding Path=Description}" 
-					Style="{StaticResource Text36pxB9A194}"
+					Style="{StaticResource Text24pxDF8D4B}"
 					Name="Description" TextWrapping="Wrap"/>                    
                 </StackPanel>
             </ScrollViewer>
