--- a/wp7-donor/Donor/NewsPage.xaml
+++ b/wp7-donor/Donor/NewsPage.xaml
@@ -6,6 +6,9 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:WPExtensions="clr-namespace:WPExtensions;assembly=WPExtensions"    
+    xmlns:msp="clr-namespace:MSPToolkit.Controls;assembly=MSPToolkit"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     SupportedOrientations="Portrait" Orientation="Portrait"
@@ -41,10 +44,14 @@
 					Name="TitleNews" 
 					Style="{StaticResource Text36pxB9A194}" 
 					TextWrapping="Wrap"/>
-                    <TextBlock Text="{Binding Path=Body}" 
+
+                    <msp:HTMLViewer NavigaionPolitic="Automatic" x:Name="Description"  
+                                    FontSize="24" ScrollViewer.VerticalScrollBarVisibility="Disabled"                
+                                    Foreground="#FF847168" Html="{Binding Path=Body}" />
+
+                    <!--<TextBlock Text="{Binding Path=Body}" 
 					Name="Description" 
-					Style="{StaticResource Text24px847168}"  
-					/>
+					Style="{StaticResource Text24px847168}"/>-->
             </StackPanel>
             </ScrollViewer>
         </Grid>
