--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -133,7 +133,7 @@
                     <ScrollViewer>
                         <ListBox 
                             Name="StationReviews" 
-                            ItemsSource="{Binding Reviews.Items}">
+                            ItemsSource="{Binding Reviews.Items}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Margin="0,10,0,0">
